--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/2. Ludoboard/main.jsx"></script>
+    <script type="module" src="/src/3. Todo/main.jsx"></script>
   </body>
 </html>
